{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 36,
  "lineage": "813e1e1a-d925-da89-70ad-cdec4d1d43c7",
  "resources": [
    {
      "module": "module.EKS-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:security-group/sg-0c2614f490c2f06c1",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2614f490c2f06c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d1baa9e9daac251"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "My-eks-cluster-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "571600844498",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_security_group.bastion-host-sg",
            "module.VPC-module.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016f4bded7ccb9361",
            "arn": "arn:aws:ec2:ap-south-1:571600844498:elastic-ip/eipalloc-016f4bded7ccb9361",
            "association_id": "eipassoc-00cde8a92da964fe9",
            "domain": "vpc",
            "id": "eipalloc-016f4bded7ccb9361",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b46f14ab0196e3f8",
            "private_dns": "ip-10-0-189-16.ap-south-1.compute.internal",
            "private_ip": "10.0.189.16",
            "public_dns": "ec2-13-205-175-12.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.205.175.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0732af6af790245ca",
            "arn": "arn:aws:ec2:ap-south-1:571600844498:elastic-ip/eipalloc-0732af6af790245ca",
            "association_id": "eipassoc-0270ffc0c5cc3bc80",
            "domain": "vpc",
            "id": "eipalloc-0732af6af790245ca",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f6bf9780dc3d7cf6",
            "private_dns": "ip-10-0-194-96.ap-south-1.compute.internal",
            "private_ip": "10.0.194.96",
            "public_dns": "ec2-13-206-20-147.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.20.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af745cab951f3029",
            "arn": "arn:aws:ec2:ap-south-1:571600844498:instance/i-091c077ddf3d4913d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091c077ddf3d4913d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kevarno-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f73ca92d33e1e8f6",
            "private_dns": "ip-10-0-170-152.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.170.152",
            "public_ip": "35.154.214.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03b289f7f9240830d",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e050d708f3b5e4bd",
            "tags": {
              "Environment": "Production",
              "Name": "bastion-host"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d1baa9e9daac251"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_security_group.bastion-host-sg",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_ami.al2023",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:internet-gateway/igw-0ffa7c9d566a5e5da",
            "id": "igw-0ffa7c9d566a5e5da",
            "owner_id": "571600844498",
            "tags": {
              "Name": "Internet-gw"
            },
            "tags_all": {
              "Name": "Internet-gw"
            },
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016f4bded7ccb9361",
            "association_id": "eipassoc-00cde8a92da964fe9",
            "connectivity_type": "public",
            "id": "nat-0ee03be2d498ed692",
            "network_interface_id": "eni-0b46f14ab0196e3f8",
            "private_ip": "10.0.189.16",
            "public_ip": "13.205.175.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e050d708f3b5e4bd",
            "tags": {
              "Name": "NAT-GW-0"
            },
            "tags_all": {
              "Name": "NAT-GW-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_eip.NAT-EIP",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0732af6af790245ca",
            "association_id": "eipassoc-0270ffc0c5cc3bc80",
            "connectivity_type": "public",
            "id": "nat-00c6cbbf2b8a44f0b",
            "network_interface_id": "eni-0f6bf9780dc3d7cf6",
            "private_ip": "10.0.194.96",
            "public_ip": "13.206.20.147",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-097367e51628789f1",
            "tags": {
              "Name": "NAT-GW-1"
            },
            "tags_all": {
              "Name": "NAT-GW-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_eip.NAT-EIP",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:route-table/rtb-020610253cfc41de9",
            "id": "rtb-020610253cfc41de9",
            "owner_id": "571600844498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ee03be2d498ed692",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_eip.NAT-EIP",
            "module.VPC-module.aws_nat_gateway.NAT-GW",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:route-table/rtb-05cff8f69a76e8f9a",
            "id": "rtb-05cff8f69a76e8f9a",
            "owner_id": "571600844498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00c6cbbf2b8a44f0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_eip.NAT-EIP",
            "module.VPC-module.aws_nat_gateway.NAT-GW",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:route-table/rtb-017d4559b63078d67",
            "id": "rtb-017d4559b63078d67",
            "owner_id": "571600844498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffa7c9d566a5e5da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_internet_gateway.IGW",
            "module.VPC-module.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098c889ee4f06d51e",
            "route_table_id": "rtb-020610253cfc41de9",
            "subnet_id": "subnet-01b31409ce1ff86b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_eip.NAT-EIP",
            "module.VPC-module.aws_nat_gateway.NAT-GW",
            "module.VPC-module.aws_route_table.Private-RT",
            "module.VPC-module.aws_subnet.private_subnet",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd55d283dfa7b613",
            "route_table_id": "rtb-05cff8f69a76e8f9a",
            "subnet_id": "subnet-02dd85cc0a84977f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_eip.NAT-EIP",
            "module.VPC-module.aws_nat_gateway.NAT-GW",
            "module.VPC-module.aws_route_table.Private-RT",
            "module.VPC-module.aws_subnet.private_subnet",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08567c61d78b736e2",
            "route_table_id": "rtb-017d4559b63078d67",
            "subnet_id": "subnet-0e050d708f3b5e4bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_internet_gateway.IGW",
            "module.VPC-module.aws_route_table.Public-RT",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4600324f0cac195",
            "route_table_id": "rtb-017d4559b63078d67",
            "subnet_id": "subnet-097367e51628789f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_internet_gateway.IGW",
            "module.VPC-module.aws_route_table.Public-RT",
            "module.VPC-module.aws_subnet.public_subnet",
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:security-group/sg-08d1baa9e9daac251",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d1baa9e9daac251",
            "ingress": [
              {
                "cidr_blocks": [
                  "223.185.37.121/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260501113450531500000001",
            "name_prefix": "terraform-",
            "owner_id": "571600844498",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:subnet/subnet-01b31409ce1ff86b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b31409ce1ff86b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600844498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-0"
            },
            "tags_all": {
              "Name": "Private-subnet-0"
            },
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:subnet/subnet-02dd85cc0a84977f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dd85cc0a84977f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600844498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-1"
            },
            "tags_all": {
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:subnet/subnet-0e050d708f3b5e4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e050d708f3b5e4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600844498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-0"
            },
            "tags_all": {
              "Name": "Public-subnet-0"
            },
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:subnet/subnet-097367e51628789f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097367e51628789f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600844498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-1"
            },
            "tags_all": {
              "Name": "Public-subnet-1"
            },
            "vpc_id": "vpc-09778657d5f71fb4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC-module.aws_vpc.Main",
            "module.VPC-module.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:571600844498:vpc/vpc-09778657d5f71fb4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2de2951ddf6cbf9",
            "default_route_table_id": "rtb-0b6d382718dba381d",
            "default_security_group_id": "sg-0d3047efc1056f608",
            "dhcp_options_id": "dopt-0f4b56f273ac4ea98",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09778657d5f71fb4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6d382718dba381d",
            "owner_id": "571600844498",
            "tags": {
              "Name": "Main-vpc"
            },
            "tags_all": {
              "Name": "Main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}